# datasets

./: .env.example  .gitignore  data_uploader.py  lang.py  metadata_updater.py  pyproject.toml  requirements-dev.txt  requirements.txt  upload.py  utils.py
.github/: README.md
gnu-docs/: config.py  docs_downloader.py  docs_processor.py  version_updater.py  versions.yaml
hf/: README.md
python-docs/: config.py  constants.py  docs_downloader.py  docs_processor.py  get_versions.py  helpers.py  main.py  process_files.py  pyproject.toml  requirements-dev.txt  requirements.txt  update_versions.py  version_updater.py  versions.py  versions.yaml
src/: data_uploader.py  metadata_updater.py  utils.py
src/gnu_docs/: README.md  config.py  docs_downloader.py  docs_processor.py  gnu_docs.py  version_updater.py  versions.yaml
src/python_docs/: README.md  config.py  docs_downloader.py  docs_processor.py  python_docs.py  version_updater.py  versions.yaml
